--- a/sty.css
+++ b/sty.css
@@ -1,14 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
 /* Reset some default styles */
 body, h1, h2, h3, p, ul, li {
     margin: 0;
     padding: 0;
+    font-family: 'Ubuntu', sans-serif;
   }
   
   body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     line-height: 1.6;
     color: #333;
-    background-color: #f9f9f9;
+    background-color: lightgray;
   }
   
   /* Styling the main header */
@@ -17,10 +19,15 @@ body, h1, h2, h3, p, ul, li {
     color: #fff;
     padding: 1rem;
     text-align: center;
+    height: 750px;
+  }
+  .container > h1{
+    padding: 70px;
+    font-size: 80px;
   }
   
   header h1 {
-    font-size: 3rem;
+    font-size: 5rem;
     margin-bottom: 1rem;
   }
   
@@ -101,15 +108,20 @@ body, h1, h2, h3, p, ul, li {
   
   /* Styling the individual project cards */
   .project-card {
-    width: calc(50% - 20px); /* To create equal spacing between projects */
-    margin-bottom: 20px;
+    width: 25%; /* To create equal spacing between projects */
+    margin: 20px;
     background-color: #fff;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    border-radius: 5px;
+    border-radius: 10px;
+    display: inline-block;
     padding: 1.5rem;
     transition: transform 0.2s ease;
+    /* position: relative; */
   }
-  
+
+  .project-card img{
+    /* float: left; */
+  }
   .project-card:hover {
     transform: translateY(-5px); /* Add a slight hover effect */
   }
@@ -164,22 +176,39 @@ body, h1, h2, h3, p, ul, li {
   }
   
   /* Responsive styles */
-  @media screen and (max-width: 768px) {
-    header h1 {
-      font-size: 2.5rem;
-    }
   
+  @media (max-width: 700px) {
     .navbar ul {
+      display: none;
       flex-direction: column;
       align-items: center;
+      position: absolute;
+      top: 60px; /* Account for the height of the fixed navigation bar */
+      left: 0;
+      width: 100%;
+      background-color: #444;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    }
+  
+    .navbar ul.active {
+      display: flex;
+    }
+  
+    .navbar .menu-icon {
+      display: block;
     }
   
     .navbar li {
       margin: 0.5rem 0;
     }
-  
-    /* Adjust container max-width for smaller screens */
-    .container {
-      max-width: 100%;
+    h1{
+      display: block;
+    }
+    .project-card{
+      display: block;
+      text-align: justify;
+      width: 85%;
+      margin-bottom: 30px;
     }
   }
+  
