--- a/styl.css
+++ b/styl.css
@@ -444,6 +444,108 @@ nav .fa-solid{
   }
   
   /* Responsive styles */
+@media (max-width: 480px) {
+  body{
+      overflow-x: hidden;
+    }
+    #about .container{
+      display: block;
+      justify-content: center;
+      align-items: center;
+      width: 100%; 
+    }
+    .about-col-1 img{
+      margin-left: 30px;
+    }
+    .about-col-2{
+      display: block;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+    }
+    .project-album {
+        grid-template-columns: 1fr; /* Single column on small screens */
+    }
+
+    .project-card img {
+        height: 150px; /* Adjusted for smaller screens */
+    }
+    .outer-nav{
+        width: 100%;
+    }
+  
+    .nav-links {
+      background-color:#99afd0;
+      height: 100vh;
+      width: 80%;
+      position: fixed;
+      top: 0;
+      left: -100%;
+      display: block;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      font-size: 3rem;
+      transition: 0.3 ease;
+    }
+    .nav-links.active {
+      left: 0;
+    }
+    .burger{
+      position: relative;
+      margin-left: auto;
+      display: flex;
+      cursor: pointer;
+      height: 50px;
+      width: 40px;
+    }
+    .burger span{
+      background-color: white;
+      width: 100%;
+      height: 5px;
+      border-radius: 25px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      transition: .3 ease;
+    }
+
+    .nav-links li {
+      margin: 1rem 0;
+      text-align: center;
+    }
+    .nav-links li a{
+      color: #02112b;
+    }
+
+    .burger span:nth-child(1){
+      top: 25%;
+    }
+    .burger span:nth-child(3){
+      top: 75%;
+    }
+
+    .burger.active .line:nth-child(1) {
+      transform: rotate(45deg) translate(10px, 8px);
+    }
+    
+    .burger.active .line:nth-child(2) {
+      opacity: 0;
+    }
+    
+    .burger.active .line:nth-child(3) {
+      transform: rotate(-45deg) translate(7px, -8px);
+    }
+    .navbar ul {
+      width: 100%;
+      display: block;
+      align-content: center;
+    }
+
+  
+  {
   @media (max-width: 768px) {
     body{
       overflow-x: hidden;
