--- a/styl.css
+++ b/styl.css
@@ -543,6 +543,9 @@ nav .fa-solid{
       display: block;
       align-content: center;
     }
+    footer{
+        margin-top: 30px;
+    }
 
   
   {
