--- a/styl.css
+++ b/styl.css
@@ -543,8 +543,60 @@ nav .fa-solid{
       display: block;
       align-content: center;
     }
+    body{
+      overflow-x: hidden;
+    }
+    #home h1{
+        font-size: 30px;
+    }
+    .typed{
+        font-size: 25px;
+    }
+    .project-album {
+      flex-direction: column;
+      height: 100%;
+    }
+    #projects{
+      height: fit-content;
+    }
+    #projects .container{
+      display: block;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+    }
+    
+    #about{
+      height: fit-content;
+    } 
+    .project-card h3 {
+      font-size: 18px;
+    }
+    .project-card p {
+      font-size: 14px;
+    }
+    .project-card {
+      flex: 1 calc(100% - 30px);
+      max-width: calc(100% - 30px);
+      padding: 20px;
+      align-items: center;
+      justify-content: center;
+    }
+    form input, form textarea{
+        width: 100%;
+        height: fit-content;
+    }
+    .outer-nav{
+      width: 100%;
+    }
+    /* .navbar{
+      width: 100%;
+    } */
+    #home{
+      width: 100%;
+    }
     footer{
-        margin-top: 30px;
+        margin-top: 50px;
     }
 
   
