--- a/styl.css
+++ b/styl.css
@@ -66,13 +66,6 @@ body, h1, h2, h3, p, ul, li {
     margin-bottom: 1rem;
   }
   
-  header img {
-    display: block;
-    margin: 0 auto;
-    border-radius: 50%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  }
-  
   /* Styling the main navigation bar */
 .outer-nav{
     background-color: black;
@@ -117,9 +110,9 @@ body, h1, h2, h3, p, ul, li {
   .navbar li{
     margin-left: 1rem;
   }
-  .nav-links.active{
+  /* .nav-links.active{
     right: 0;
-  }
+  } */
   .navbar a:hover {
     color: #64ffda;
   }
@@ -448,6 +441,16 @@ nav .fa-solid{
     body{
       overflow-x: hidden;
     }
+    .navbar {
+      background-color: #0a192f;
+      position: sticky;
+      top: 0;
+      z-index: 999;
+      padding: 1rem 2rem;
+      width: 100%;
+      overflow: hidden;
+      box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.15);
+    }
     #about .container{
       display: block;
       justify-content: center;
@@ -465,6 +468,8 @@ nav .fa-solid{
     }
     .project-album {
         grid-template-columns: 1fr; /* Single column on small screens */
+        align-items: center;
+        justify-content: center;
     }
 
     .project-card img {
@@ -544,7 +549,7 @@ nav .fa-solid{
       align-content: center;
     }
     footer{
-        margin-top: 65px;
+      margin-top: 65px;
     }
     
 }
@@ -600,13 +605,10 @@ nav .fa-solid{
     .outer-nav{
       width: 100%;
     }
-    /* .navbar{
-      width: 100%;
-    } */
     #home{
       width: 100%;
     }
     footer{
-        margin-top: 30px;
+        margin-top: 65px;
     }
   }
