--- a/styl.css
+++ b/styl.css
@@ -471,6 +471,7 @@ nav .fa-solid{
         align-items: center;
         flex-direction: column;
         justify-content: center;
+        margin-left: 20px;
     }
     #projects .container{
       display: block;
@@ -483,8 +484,7 @@ nav .fa-solid{
     }
     .outer-nav{
         width: 100%;
-    }
-  
+    } 
     .nav-links {
       background-color:#99afd0;
       height: 100vh;
