--- a/styl.css
+++ b/styl.css
@@ -471,7 +471,9 @@ nav .fa-solid{
         align-items: center;
         flex-direction: column;
         justify-content: center;
-        margin-left: 20px;
+    }
+    .project-card{
+      margin-left: 20px;
     }
     #projects .container{
       display: block;
