--- a/styl.css
+++ b/styl.css
@@ -467,10 +467,10 @@ nav .fa-solid{
       width: 100%;
     }
     .project-album {
-        display: block; /* Single column on small screens */
+        grid-template-columns: 1fr; /* Single column on small screens */
         align-items: center;
-/*         flex-direction: column; */
         justify-content: center;
+        margin-left: 40px;
     }
     #projects .container{
       display: block;
