--- a/styl.css
+++ b/styl.css
@@ -432,6 +432,7 @@ nav .fa-solid{
   footer {
     text-align: center;
     padding: 1rem;
+    margin-top: 30px;
     background-color: #0a192f;
     color: #fff;
   }
