--- a/styl.css
+++ b/styl.css
@@ -468,16 +468,24 @@ nav .fa-solid{
       width: 100%;
     }
     .project-album {
-        grid-template-columns: 1fr; /* Single column on small screens */
+        display: flex;
+/*         grid-template-columns: 1fr; */
+        flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin-left: 30px;
+        margin: 0 auto;
+        width: 100%;
     }
     #projects .container{
       display: block;
       align-items: center;
       justify-content: center;
       text-align: center;
+    }
+    .project-card{
+      max-width: 400px;
+      width: 90%;
+      margin: 1rem 0;
     }
     .project-card img {
         height: 150px; /* Adjusted for smaller screens */
