--- a/styl.css
+++ b/styl.css
@@ -444,7 +444,7 @@ nav .fa-solid{
     }
     .navbar {
       background-color: #0a192f;
-      position: sticky;
+      position: fixed;
       top: 0;
       z-index: 999;
       padding: 1rem 2rem;
