--- a/styl.css
+++ b/styl.css
@@ -83,6 +83,125 @@ body, h1, h2, h3, p, ul, li {
     overflow: hidden;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.15);
   }
+
+  .inner-caro {
+    display: block;
+    box-shadow: 2px 2px 10px rgba(236, 234, 234, 0.3);  
+    padding: 1rem;
+    box-sizing: border-box;
+    height: 90%;
+  }
+  .inner-caro h3, h2{
+    text-decoration: underline;
+    text-decoration-thickness: 2px; /* Adjust the thickness of the underline */
+    text-underline-offset: 30px;
+  }
+  .inner-caro ul{
+    list-style: none;
+    font-size: 15px;
+    padding: 0;
+    margin-top: 40px;
+    margin-bottom: 10px;
+  }
+  .inner-caro ul li+li{
+    margin-top: 10px;
+  }
+  .inner-caro p{
+    padding: 0;
+    margin-top: 30px;
+  }
+  video {
+    max-width: 100%; /* Ensure the video doesn’t exceed the container width */
+    max-height: 100%; /* Ensure the video doesn’t exceed the container height */
+    width: auto; /* Or a specific width */
+    height: auto; /* Keep the aspect ratio */
+    border-radius: 2%;
+  }
+  
+  .outer-c {
+    box-shadow: 2px 2px 10px rgb(0, 0, 0); 
+    height: 75vh;
+    margin: 2rem; 
+    display: grid;
+    max-width: 100%;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: auto auto;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+    gap: 1rem;
+    
+  }
+  @media (max-width: 768px) {
+    .outer-c{
+      grid-template-columns: 1fr;
+      grid-template-rows: auto;
+      gap: 1rem;
+      width: 100%;
+      height: 100%;
+      margin-top: 5rem;
+      
+    }
+    .inner-caro{
+      height: 100%;
+      width: 100%;
+      max-width: fit-content;
+      max-height: none;
+      align-items: center;
+    }
+    video{
+      max-width: none;
+      width: 100%;
+      height: 100%;
+    }
+    
+  }
+  @media (max-width: 480px) {
+    .outer-c {
+        padding: 0.5rem;
+        margin: 1rem;
+    }
+
+    .inner-caro {
+        padding: 1rem;
+        font-size: 0.9rem;
+    }
+
+    .inner-caro h2 {
+        font-size: 1.25rem;
+    }
+
+    .inner-caro h2::after {
+        width: 60%;
+    }
+}
+  
+  @media (max-width: 1100px) {
+    .outer-c {
+      grid-template-columns: 1fr;
+      grid-template-rows: auto auto;
+      gap: 1rem;
+      width: 100%;
+      height: auto;
+      max-width: fit-content;
+      max-height: fit-content;
+    }
+    video{
+      max-width: none;
+      width: 100%;
+      height: auto;
+      max-height: fit-content;
+    }
+    .inner-caro{
+      height: 100%;
+      width: 100%;
+      max-width: none;
+      max-height: none;
+      
+    }
+  }
+
+  
   .burger {
     display: none;
     cursor: pointer;
