--- a/styl.css
+++ b/styl.css
@@ -160,6 +160,7 @@ body, h1, h2, h3, p, ul, li {
     .outer-c {
         padding: 0.5rem;
         margin: 1rem;
+        margin-top: 5rem;
     }
 
     .inner-caro {
