--- a/styl.css
+++ b/styl.css
@@ -552,7 +552,7 @@ nav .fa-solid{
   footer {
     text-align: center;
     padding: 1rem;
-    margin-top: 30px;
+    margin-top: 2rem;
     background-color: #0a192f;
     color: #fff;
   }
@@ -683,7 +683,7 @@ nav .fa-solid{
       align-content: center;
     }
     footer{
-      margin-top: 100px;
+      margin-top: 5rem;
     }
     
 }
