--- a/styl.css
+++ b/styl.css
@@ -129,8 +129,12 @@ body, h1, h2, h3, p, ul, li {
     justify-content: center;
     align-items: center;
     padding: 2rem;
-    gap: 1rem;
-    
+    gap: 1rem; 
+  }
+  .sector{
+    padding: 2rem 0;
+    height: 100vh;
+    margin-top: 5rem;
   }
   @media (max-width: 768px) {
     .outer-c{
@@ -140,6 +144,7 @@ body, h1, h2, h3, p, ul, li {
       width: 100%;
       height: 100%;
       margin-top: 5rem;
+      
       
     }
     .inner-caro{
