--- a/styl.css
+++ b/styl.css
@@ -183,6 +183,9 @@ body, h1, h2, h3, p, ul, li {
     footer{
       margin-top: 5rem;
     }
+    #contact{
+      margin-bottom: 3rem;
+    }
 }
   
   @media (max-width: 1100px) {
