--- a/styl.css
+++ b/styl.css
@@ -91,7 +91,7 @@ body, h1, h2, h3, p, ul, li {
     box-sizing: border-box;
     height: 90%;
   }
-  .inner-caro h3, h2{
+  .inner-caro h3, .inner-caro h2{
     text-decoration: underline;
     text-decoration-thickness: 2px; /* Adjust the thickness of the underline */
     text-underline-offset: 30px;
