--- a/styl.css
+++ b/styl.css
@@ -377,7 +377,8 @@ body, h1, h2, h3, p, ul, li {
     background-size: 20px 20px;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: auto;
+    overflow: hidden;
     gap: 2rem;
   }
   .container {
@@ -390,11 +391,12 @@ body, h1, h2, h3, p, ul, li {
 .project-album {
   display: grid;
   flex-wrap:nowrap;
-  gap: 50px;
+  gap: 2rem;
   justify-content: center;
   align-items: center;
   margin-top: 70px;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  overflow: hidden;
 }
 #projects .container{
   margin-left: auto;
